# mypy-protobuf

./: .flake8  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  README.md  mypy.ini  mypy_requirements.txt  pyproject.toml  pyrightconfig.json  requirements.txt  run_test.sh  run_test_simple.sh  setup.cfg  setup.py  stubtest_allowlist.txt  test_requirements.txt
.github/: dependabot.yml  package.json
.github/workflows/: main.yml
go/src/proto/mypy/: mypy.pb.go
go/src/protoc-gen-mypy/: .main.go.swp  main.go
mypy_protobuf/: extensions_pb2.py  extensions_pb2.pyi  main.py
proto/: base.proto  base_import.proto
proto/google/protobuf/: any.proto  descriptor.proto  duration.proto  empty.proto  struct.proto  timestamp.proto  unittest_features.proto  wrappers.proto
proto/mypy/: mypy.proto
proto/mypy_protobuf/: extensions.proto
proto/test/proto/: test.proto  test3.proto  test_extensions.proto  test_no_generic_services.proto
proto/test/proto/inner/: inner.proto
proto/test/proto/nested/: nested.proto
proto/testproto/: comment_special_chars.proto  edition2024.proto  edition2024implicitfieldpresence.proto  nopackage.proto  readme_enum.proto  reexport.proto  test.proto  test3.proto  test_extensions2.proto  test_extensions3.proto  test_no_generic_services.proto
proto/testproto/Capitalized/: Capitalized.proto
proto/testproto/dot.com/: test.proto
proto/testproto/grpc/: deprecated.proto  dummy.proto  import.proto
proto/testproto/inner/: inner.proto  test3.proto
proto/testproto/nested/: nested.proto
python/: mypy_protobuf.py  mypy_protobuf_lib.py  protoc-gen-mypy  protoc_gen_mypy.bat  setup.py
python/mypy_protobuf/: __main__.py  stub_gen.py  typeshed.pyi.tmpl
python/proto/mypy_protobuf/: extensions_pb2.pyi
test/: requirements.txt  test_async_only.py  test_concrete.py  test_generated_mypy.py  test_grpc_async_usage.py  test_grpc_usage.py  test_sync_only.py
test/async_only/: test_async_only.py
test/generated-async-only/testproto/: nopackage_pb2.py  readme_enum_pb2.py  test3_pb2.py  test_no_generic_services_pb2.py  test_no_generic_services_pb2.pyi  test_pb2.py
test/generated-async-only/testproto/grpc/: dummy_pb2_grpc.pyi  import_pb2.py  import_pb2_grpc.pyi
test/generated-async-only/testproto/nested/: nested_pb2.py
test/generated-concrete/testproto/: comment_special_chars_pb2.pyi
test/generated-concrete/testproto/Capitalized/: Capitalized_pb2.pyi
test/generated-sync-only/testproto/: comment_special_chars_pb2.py  edition2024_pb2.py  reexport_pb2.py  test_extensions2_pb2.py  test_extensions3_pb2.py
test/generated-sync-only/testproto/Capitalized/: Capitalized_pb2.py
test/generated-sync-only/testproto/grpc/: dummy_pb2_grpc.py  import_pb2_grpc.py
test/generated-sync-only/testproto/inner/: inner_pb2.py
test/generated_async_only/testproto/: comment_special_chars_pb2.pyi  edition2024_pb2_grpc.pyi  edition2024implicitfieldpresence_pb2.pyi  reexport_pb2.pyi  reexport_pb2_grpc.pyi  test3_pb2.pyi  test3_pb2_grpc.pyi  test_extensions2_pb2_grpc.pyi  test_no_generic_services_pb2.pyi  test_no_generic_services_pb2_grpc.pyi  test_pb2.pyi  test_pb2_grpc.pyi
test/generated_async_only/testproto/Capitalized/: Capitalized_pb2.pyi
test/generated_async_only/testproto/grpc/: deprecated_pb2.pyi  deprecated_pb2_grpc.pyi  dummy_pb2.pyi  dummy_pb2_grpc.pyi  import_pb2_grpc.py  import_pb2_grpc.pyi
test/generated_async_only/testproto/inner/: inner_pb2.pyi
test/generated_async_only/testproto/nested/: nested_pb2.pyi
test/generated_concrete/: base_import_pb2.pyi  test2_pb2.pyi  test_pb2.pyi
test/generated_concrete/google/protobuf/: any_pb2.pyi  any_test_pb2.pyi  api_pb2.pyi  descriptor_pb2.pyi  duration_pb2.pyi  edition_unittest_pb2.pyi  empty_pb2.pyi  field_mask_pb2.pyi  internal_metadata_locator_test_pb2.pyi  internal_options_pb2.pyi  (+49 more)
test/generated_concrete/mypy_protobuf/: extensions_pb2.pyi
test/generated_concrete/testproto/: comment_special_chars_pb2.pyi  edition2024_pb2.pyi  edition2024implicitfieldprescence_pb2.pyi  edition2024implicitfieldpresence_pb2.pyi  nopackage_pb2.pyi  readme_enum_pb2.pyi  test3_pb2.pyi  test_extensions2_pb2.pyi  test_no_generic_services_pb2.pyi  test_pb2.pyi
test/generated_sync_only/testproto/: comment_special_chars_pb2.pyi  edition2024implicitfieldpresence_pb2.pyi  readme_enum_pb2.pyi  reexport_pb2.pyi  reexport_pb2_grpc.pyi  test3_pb2.pyi  test3_pb2_grpc.pyi  test_extensions2_pb2.pyi  test_no_generic_services_pb2_grpc.pyi  test_pb2.pyi  test_pb2_grpc.pyi
test/output/: test3_pb2.pyi.expected  test_pb2.pyi.expected
test/proto/: nopackage_pb2.pyi.expected  test.proto  test3.proto  test3_pb2.pyi.expected  test_extensions_pb2.pyi.expected  test_no_generic_services_pb2.pyi.expected  test_pb2.pyi.expected
test/proto/Capitalized/: Capitalized_pb2.pyi.expected
test/proto/inner/: inner_pb2.pyi.expected
test/proto/nested/: nested_pb2.pyi.expected
test/sync_only/: test_sync_only.py
test_negative/: negative.py  negative_2.7.py  negative_3.5.py  negative_3.8.py  output.expected.2.7  output.expected.2.7.omit_linenos  output.expected.2.7.txt  output.expected.3.10  output.expected.3.10.omit_linenos  output.expected.3.11  output.expected.3.11.omit_linenos  output.expected.3.12  output.expected.3.12.omit_linenos  output.expected.3.13  output.expected.3.13.omit_linenos  output.expected.3.14  output.expected.3.14.omit_linenos  output.expected.3.5  output.expected.3.5.txt  output.expected.3.8  output.expected.3.8.omit_linenos  output.expected.3.9  output.expected.3.9.omit_linenos
(+40 files in other folders)
