[metadata]
name = mypy-protobuf
version = attr: mypy_protobuf.main.__version__
description = Generate mypy stub files from protobuf specs
keywords = mypy proto dropbox
license = Apache License 2.0
author = Nipunn Koorapati
author_email = nipunn1313@gmail.com
url = https://github.com/dropbox/mypy-protobuf
download_url = https://github.com/dropbox/mypy-protobuf/releases

[options]
py_modules =
    mypy_protobuf
    mypy_protobuf.main
    mypy_protobuf.extensions_pb2
install_requires =
    protobuf>=3.17.3
    types-protobuf>=3.17.3
python_requires = >=3.6

[options.entry_points]
console_scripts =
    protoc-gen-mypy = mypy_protobuf.main:main
    protoc-gen-mypy_grpc = mypy_protobuf.main:grpc
